fix role, add create user endpoint
